--- a/index 3.html
+++ b/index 3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?93d0df67ba834770ecbb" rel="stylesheet"></head>
+<link href="main.css?9501ea36e959d7b36382" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -40,13 +40,13 @@
             </div>
         </header>
         <div class="main-title center-block">
-            <div class="main-title__logo text-4xl sm:text-6xl">Anthony Kent</div>
-            <div class="main-title__slogan text-xl md:text-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
-            <div class="main-title__about scrolling text-sm sm:text-xl"><a href="#about">about me</a></div>
+            <div class="main-title__logo">Anthony Kent</div>
+            <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
+            <div class="main-title__about scrolling"><a href="#about">about me</a></div>
         </div>
         <div class="container flex justify-between flex-wrap" id="about">
-            <div class="about-img w-full lg:w-1/2 px-0 lg:px-4 py-0 lg:py-2">
-                <img src='images/2fb85ddfae9bd154da2d81645038a11c.png' class="w-full object-cover px-0 lg:px-4 py-0 lg:py-2">
+            <div class="about-img w-full lg:w-1/2">
+                <img src='images/2fb85ddfae9bd154da2d81645038a11c.png' class="w-full object-cover">
             </div>
             <div class="about-text w-full lg:w-1/2">
                 <div class="about-text__h1 text-3xl lg:text-4xl">
@@ -64,7 +64,6 @@
             </div>
         </div>
         <div class="container">
-            <div class="text-center text-3xl font-bold pt-20">Testimonials</div>
             <div class="feedback">
                 <div class="feedback-item">
                     <div class="feedback-item__img">
@@ -118,6 +117,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?93d0df67ba834770ecbb"></script></body>
+<script type="text/javascript" src="main.js?9501ea36e959d7b36382"></script></body>
 
 </html>
