--- a/services 4.html
+++ b/services 4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?93d0df67ba834770ecbb" rel="stylesheet"></head>
+<link href="main.css?9501ea36e959d7b36382" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full flex sm:hidden">
@@ -47,64 +47,42 @@
                 <div class="clients-container__block">ff</div>
             </div>
         </div> -->
-        <div class="container services-container flex-col-reverse sm:flex-row">
-            <div class="center-block">
-                <div class="clients-containe">
-                    <div class="clients-block">
-                        <div class="clients-block__title text-3xl lg:text-4xl">
-                            Services
-                        </div>
-                        <div class="clients-block__text text-xl">
-                            <ul>
-                                <li>Taglines and business names</li>
-                                <li>Websites</li>
-                                <li>Brochures</li>
-                                <li>Sales letters</li>
-                                <li>Video marketing scripts</li>
-                                <li>Print advertisements</li>
-                                <li>White papers</li>
-                                <li>Press releases</li>
-                                <li>SEO</li>
-                                <li>Blogs</li>
-                                <li>Radio and television advertising copy</li>
-                                <li>Presentations</li>
-                            </ul>
-                        </div>
+        <div class="container clients-option">
+            <div class="options scrolling md:justify-between">
+                <div class="options-item"><a href="#inform">Inform</a></div>
+                <div class="options-item"><a href="#educate">Educate</a></div>
+                <div class="options-item"><a href="#attract">Attract</a></div>
+                <div class="options-item"><a href="#inspire">Inspire</a></div>
+                <div class="options-item"><a href="#persuade">Persuade</a></div>
+                <div class="options-item"><a href="#convince">Convince</a></div>
+                <div class="options-item"><a href="#sell">Sell</a></div>
+            </div>
+        </div>
+        <div class="container center-block pt-4">
+            <div class="clients-containe">
+                <div class="clients-block">
+                    <div class="clients-block__title text-3xl lg:text-4xl">
+                        Services
+                    </div>
+                    <div class="clients-block__text text-xl">
+                        <ul>
+                            <li>Taglines and business names</li>
+                            <li>Websites</li>
+                            <li>Brochures</li>
+                            <li>Sales letters</li>
+                            <li>Video marketing scripts</li>
+                            <li>Print advertisements</li>
+                            <li>White papers</li>
+                            <li>Press releases</li>
+                            <li>SEO</li>
+                            <li>Blogs</li>
+                            <li>Radio and television advertising copy</li>
+                            <li>Presentations</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="clients-option">
-                <div class="options scrolling md:justify-between flex-row sm:flex-col">
-                    <div class="options-item"><a href="#inform">Inform</a></div>
-                    <div class="options-item"><a href="#educate">Educate</a></div>
-                    <div class="options-item"><a href="#attract">Attract</a></div>
-                    <div class="options-item"><a href="#inspire">Inspire</a></div>
-                    <div class="options-item"><a href="#persuade">Persuade</a></div>
-                    <div class="options-item"><a href="#convince">Convince</a></div>
-                    <div class="options-item"><a href="#sell">Sell</a></div>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <div class="footer-phone py-4 w-full md:w-1/4">
-                <a href="tel:+79165118255">+79165118255(Rus)</a>
-                <a href="tel:+447757361333">+447757361333(UK)</a>
-            </div>
-            <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
-                <div class="footer-icon"><i class="fab fa-facebook"></i></div>
-                <div class="footer-icon"><i class="fab fa-vk"></i></div>
-                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
-                <div class="footer-icon"><i class="fab fa-instagram"></i></div>
-            </div>
-            <div class="footer-mail py-4 w-full md:w-1/4">
-                <a href="mailto:test@gmail.com">test@gmail.com</a>
-            </div>
-        </footer>
-    </div>
-<script type="text/javascript" src="main.js?93d0df67ba834770ecbb"></script></body>
-
-<!-- <div class="container center-block pt-4">
-    <div class="option-blocks">
+            <!-- <div class="option-blocks">
                 <div class="options-block w-full md:w-1/2" id="inform">
                     <div class="options-block__title">
                         Inform
@@ -147,7 +125,24 @@
                     </div>
                     <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ducimus voluptatibus non! Aut, facilis dolorum.</div>
                 </div>
+            </div> -->
+        </div>
+        <footer>
+            <div class="footer-phone py-4 w-full md:w-1/4">
+                <a href="tel:+79165118255">+79165118255(Rus)</a>
+                <a href="tel:+447757361333">+447757361333(UK)</a>
             </div>
-        </div> -->
+            <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
+                <div class="footer-icon"><i class="fab fa-facebook"></i></div>
+                <div class="footer-icon"><i class="fab fa-vk"></i></div>
+                <div class="footer-icon"><i class="fab fa-youtube"></i></div>
+                <div class="footer-icon"><i class="fab fa-instagram"></i></div>
+            </div>
+            <div class="footer-mail py-4 w-full md:w-1/4">
+                <a href="mailto:test@gmail.com">test@gmail.com</a>
+            </div>
+        </footer>
+    </div>
+<script type="text/javascript" src="main.js?9501ea36e959d7b36382"></script></body>
 
 </html>
